syntax = "proto3";

package nh_obj;

message ObjData {
    int32 otyp = 1;
    int32 quan = 2;
    int32 spe =  3;
    int32 oclass = 4;
    uint64 bitflags = 5;
    int32 corpsenm = 6;
    int32 usecount = 7;
    uint32 oeaten = 8;
    int32 age = 9;
    string name = 10;
}